add GC algo details